# toy-mako

./: Cargo.toml
examples/normal/: index.ts
src/: main.rs
