[package]
name = "toy-mako"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_core = { version = "=0.83.19", features = [
  "__ecma",
  "__visit",
  "__utils",
  "__ecma_transforms",
  "__parser",
  "ecma_ast",
  "__ecma_plugin_transform",
  "ecma_codegen",
  "ecma_quote",
  "ecma_minifier",
  "common_concurrent",
  "common_tty",
  "common_sourcemap",
  "ecma_minifier_concurrent",
  "ecma_transforms_react",
  "ecma_transforms_module",
  "ecma_transforms_optimization",
  "ecma_transforms_proposal",
  "ecma_transforms_typescript",
  "ecma_transforms_compat",
  "__testing_transform",
  "ecma_visit_path",
  "ecma_preset_env",
  "css_ast",
  "css_codegen",
  "css_parser",
  "css_utils",
  "css_visit",
  "css_visit_path",
  "css_minifier",
  "css_compat",
  "css_modules",
  "css_prefixer",
]}
swc_node_comments   = "0.19.1"
swc_error_reporters = "0.16.1"
oxc_resolver = "1.8.1"

